移除日志的结束模式和开始模式，固定使用结束模式
