# internal/model/log_entry.go
@@ -9,7 +9,7 @@ type LogEntry struct {
 	LogTime       string    `gorm:"type:varchar(8);not null" json:"log_time"`        // HH:mm:ss
 	EventType     string    `gorm:"type:varchar(100);not null" json:"event_type"`
 	Detail        string    `gorm:"type:text" json:"detail"`
-	TimePointMode string    `gorm:"type:varchar(5);default:''" json:"time_point_mode"` // "start" or "end"
+	TimePointMode string    `gorm:"type:varchar(5);default:''" json:"time_point_mode"` // fixed "end"
 	CreatedAt     time.Time `json:"created_at"`
 	UpdatedAt     time.Time `json:"updated_at"`
 }
